--- a/README
+++ b/README
@@ -1,15 +1,13 @@
 Hello there!
 
-I'm creating a ToDo App..... You might think oh nooo! not another ToDo App 🤯
+I'm creating a ToDo App. You might be thinking: another ToDo App? 🤯
 
-I know what you're thinking but no.😁
+I know what you might be thinking, but no. 😁 I want to have this app be a container of sorts for our current and/or future app ideas.
 
-I want to make this app as a container to our new || current app ideas. 
+This app should make it easy to organize your app, website or software related ideas. 
 
-This app should make it easy to organize your app || website || software related ideas. 
+I have a few functionalities in mind, but I am happily open to suggestions and collaborative work.
 
-I have a few functionalities in mine but im open to suggestions and collaborative work.
+Please, email or message me here if you'd like to collaborate. 
 
-So please email me or message me here if you'll like to collaborate. 
-
-Thanks and don't forget to follow the project here for updates! 👍
+Thank you, and don't forget to follow the project here for updates! 👍
